--- a/style.css
+++ b/style.css
@@ -1,62 +1,52 @@
 body{
     background-color: rgb(105, 106, 107);
+    text-align: center;
 }
 /* Serchbar code */ 
 .search-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    text-align: center;
-  }
-  
-  .search-header__input {
-    font-family: inherit;
-    font-size: 16px;
-    background-color: #0a0a0a;
-    border: solid 0.5px #525252;
-    color: #646464;
-    padding: 0.7rem 1rem;
-    border-radius: 25px;
-    width: 240px;
-    height: 48px;
-    transition: all ease-in-out 0.5s;
-    margin-right: -2rem;
-    opacity: 1;
-    text-align: center;
-  }
-  
-  .search-header__input:hover,
-  .search-header__input:focus {
-    box-shadow: 0 0 1em #00000013;
-  }
-  
-  .search-header__input:focus {
-    outline: none;
-    background-color: #0a0a0aad;
-  }
-  
-  .search-header__input::-webkit-input-placeholder {
-    font-weight: 100;
-    color: #3a3a3a;
-  }
-  
-  .search-header__input:focus + .search-header__button {
-    background-color: transparent;
-  }
-  
-  .search-header__button {
-    border: none;
-    background-color: transparent;
-    margin-top: 0.1em;
-  }
-  
-  .search-header__button:hover {
-    cursor: pointer;
-  }
-  
-  .search-header__icon {
-    height: 1.3em;
-    width: 1.3em;
-    fill: #3a3a3a;
-  }
-  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.search-header__wrapper {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.search-header__input {
+  font-family: inherit;
+  font-size: 16px;
+  background-color: #0a0a0a;
+  border: solid 0.5px #a5a0a0;
+  color: #cac3c3;
+  padding: 0.7rem 2.5rem 0.7rem 1rem; /* Added padding-right for space for icon */
+  border-radius: 25px;
+  width: 600px;
+  height: 30px;
+  transition: all ease-in-out 0.5s;
+  opacity: 1;
+  text-align: left; /* Align text to the left */
+}
+
+.search-header__button {
+  position: absolute;
+  right: 10px; /* Adjust position as needed */
+  background-color: transparent;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.search-header__button:hover {
+  cursor: pointer;
+}
+
+.search-header__icon {
+  height: 1.3em;
+  width: 1.3em;
+  fill: #cec6c6;
+}
