--- a/style.css
+++ b/style.css
@@ -1,7 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 body{
     background-color: rgb(105, 106, 107);
     text-align: center;
 }
+
+h1{
+
+  font-family: "Playfair Display", serif;
+  font-size: 50px;
+}
+
 /* Serchbar code */ 
 .search-header {
   display: flex;
@@ -22,7 +30,7 @@ body{
   background-color: #0a0a0a;
   border: solid 0.5px #a5a0a0;
   color: #cac3c3;
-  padding: 0.7rem 2.5rem 0.7rem 1rem; /* Added padding-right for space for icon */
+  padding: 0.7rem 2.5rem 0.7rem 1rem; /* Adding padding-right for space for icon */
   border-radius: 25px;
   width: 600px;
   height: 30px;
@@ -33,7 +41,7 @@ body{
 
 .search-header__button {
   position: absolute;
-  right: 10px; /* Adjust position as needed */
+  right: 10px; 
   background-color: transparent;
   border: none;
   display: flex;
@@ -49,4 +57,60 @@ body{
   height: 1.3em;
   width: 1.3em;
   fill: #cec6c6;
+}
+
+.dashboard {
+  background: url('Wether img/main.jpeg') no-repeat center center/cover;
+  /* width: 500%; */
+  height:500px;
+  padding: 20px;
+  border-radius: 12px;
+  position: relative;
+  margin-top: 30px;
+}
+
+
+.content {
+  display: flex;
+  height:460px;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 15px;
+  border-radius: 8px;
+}
+
+.location-info {
+  color: white;
+}
+
+.forecast ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  color: white;
+}
+
+.forecast ul li {
+  display: flex;
+  justify-content: space-between;
+  padding: 4px 0;
+}
+
+.current-weather {
+  text-align: center;
+  color: white;
+}
+
+.current-weather h1 {
+  font-size: 50px;
+  margin-bottom: 5px;
+}
+
+.current-weather p {
+  font-size: 18px;
+}
+
+.time {
+  margin-top: 10px;
 }
