--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ body{
 }
 
 h1{
-
   font-family: "Playfair Display", serif;
   font-size: 50px;
 }
@@ -60,7 +59,6 @@ h1{
   fill: #cec6c6;
 }
 
-
 /* main page css */
 .dashboard {
   background: url('Wether img/main.jpeg') no-repeat center center/cover;
@@ -89,11 +87,18 @@ h1{
   margin-right: 20px;
 }
 
-.location-info, .current-weather {
+.location-info{
   text-align: left;
   font-size: large;
   color: #000000;
 }
+
+.current-weather{
+  text-align: left;
+  margin-top: 80px;
+  font-size:50px;
+  color: #000000;
+} 
 
 .forecast {
   background-color: rgba(0, 0, 0, 0.5);
@@ -132,11 +137,9 @@ h1{
 }
 
 .time {
-  font-size: 18px;
+  font-size: 50px;
   color: white;
 }
-
-
 
 .current-weather h1 {
   font-size: 50px;
@@ -146,7 +149,6 @@ h1{
 .current-weather p {
   font-size: 18px;
 }
-
 
 @media (max-width: 768px) {
   .content {
