--- a/style.css
+++ b/style.css
@@ -89,16 +89,23 @@ h1{
 
 .location-info{
   text-align: left;
-  font-size: large;
+  font-size: 30px;
+  margin-top: 10px;
   color: #000000;
 }
 
 .current-weather{
   text-align: left;
-  margin-top: 80px;
-  font-size:50px;
-  color: #000000;
+  margin-top: 100px;
+  font-size:60px;
+  color: hsl(0, 0%, 100%);
 } 
+.most-cloudy{
+  text-align: left;
+  /* margin-top: 90px; */
+  font-size:60px;
+  color: hsl(0, 0%, 100%);
+}
 
 .forecast {
   background-color: rgba(0, 0, 0, 0.5);
@@ -194,5 +201,25 @@ h1{
   .current-weather p {
       font-size: 14px;
   }
+  
 }
 
+.order-card {
+  /* background-color: #1b3a30; */
+  border: 1px solid #777e7a;
+  border-radius: 8px;
+  padding: 20px;
+  text-align: left;
+  /* width: 200px; */
+}
+
+.order-card hr {
+  border: 0;
+  border-top: 1px solid #777e7a;
+  margin: 10px 0;
+}
+
+.cardImg{
+  height: 80px;
+  width: 80px;
+}
