--- a/style.css
+++ b/style.css
@@ -205,17 +205,16 @@ h1{
 }
 
 .order-card {
-  /* background-color: #1b3a30; */
-  border: 1px solid #777e7a;
+  border: 1px solid #dae2de;
   border-radius: 8px;
   padding: 20px;
-  text-align: left;
-  /* width: 200px; */
+  width: 20%;
+  text-align: center;
 }
 
 .order-card hr {
   border: 0;
-  border-top: 1px solid #777e7a;
+  border-top: 1px solid #dae2de;
   margin: 10px 0;
 }
 
