--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
-body{
+.body{
     background-color: rgb(105, 106, 107);
     text-align: center;
+    justify-items: center;
 }
 
 h1{
   font-family: "Playfair Display", serif;
   font-size: 50px;
+  color: #000000;
+  margin-top: 10px;
 }
 
 /* Serchbar code */ 
@@ -30,13 +33,14 @@ h1{
   background-color: #0a0a0a;
   border: solid 0.5px #a5a0a0;
   color: #cac3c3;
-  padding: 0.7rem 2.5rem 0.7rem 1rem; /* Adding padding-right for space for icon */
+  padding: 0.7rem 2.5rem 0.7rem 1rem; 
   border-radius: 25px;
   width: 600px;
-  height: 30px;
+  height: 50px;
   transition: all ease-in-out 0.5s;
   opacity: 1;
-  text-align: left; /* Align text to the left */
+  text-align: left;
+  margin-top: 10px;
 }
 
 .search-header__button {
@@ -204,20 +208,29 @@ h1{
 }
 
 .order-card {
+  margin-top: 20px;
   border: 1px solid #dae2de;
   border-radius: 8px;
+  color: #000000;
   padding: 20px;
-  width: 20%;
+  width: 50%;
+  justify-items: center;
   text-align: center;
 }
 
 .order-card hr {
   border: 0;
-  border-top: 1px solid #dae2de;
-  margin: 10px 0;
+  border-top: 2px solid #dae2de;
+  margin: 20px 0;
 }
 
 .cardImg{
-  height: 80px;
-  width: 80px;
+  height: 150px;
+  width: 100px;
 }
+
+/* .order-card p{
+  color: #000000;
+  text-align: center;
+  width: 10px;
+}  */
