--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ h1{
   margin-top: 10px;
 }
 
+h2{
+color: #000000;
+font-size: 30px;
+}
+
 /* Serchbar code */ 
 .search-header {
   display: flex;
@@ -113,15 +118,16 @@ h1{
 .forecast {
   background-color: rgba(0, 0, 0, 0.5);
   font-size: 20px;
-  padding: 15px;
+  text-align: center;
+  padding: 5px;
   border-radius: 8px;
   height: 500px;
-  max-width: 35%;
+  max-width: 50%;
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: end;
+  /* align-items: center; */
 }
 
 .forecast ul {
@@ -160,7 +166,7 @@ h1{
   font-size: 18px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
   .content {
       flex-direction: column;
   }
