--- a/style.css
+++ b/style.css
@@ -237,13 +237,10 @@ h2 {
   width: 100px;
 }
 
-/* .nextMainImg{
-  height: 80%;
-  width: 100%;
-} */
+
 .wheatherUpdate {
   background: url('Wether img/nextMain.jpeg') no-repeat center center/cover;
-  height: 500px;
+  height: 600px;
   padding: 20px;
   border-radius: 12px;
   position: relative;
@@ -259,13 +256,13 @@ h2 {
   text-align: left;
   padding: 5px;
   border-radius: 8px;
-  height: 480px;
+  height: 580px;
   max-width: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: end;
-  /* align-items: center; */
+  align-items: center;
 }
 
 /* Input desplay */
