--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
 .body {
-  background-color: rgb(105, 106, 107);
+  background-color: rgb(32, 1, 15);
+  color: #ffffff;
   text-align: center;
   justify-items: center;
 }
@@ -9,13 +10,12 @@
 h1 {
   font-family: "Playfair Display", serif;
   font-size: 50px;
-  color: #000000;
   margin-top: 10px;
 }
 
 h2 {
-  color: #000000;
-  font-size: 30px;
+  font-family: "Playfair Display", serif;
+  font-size: 50px;
 }
 
 /* Serchbar code */
@@ -221,7 +221,7 @@ h2 {
 }
 
 .order-card {
-  margin-top: 20px;
+  margin-top: 40px;
   border: 1px solid #434444;
   border-radius: 10px;
   color: #000000;
