--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@ h1 {
 h2 {
   font-family: "Playfair Display", serif;
   font-size: 50px;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 /* Serchbar code */
@@ -265,8 +267,8 @@ h2 {
   padding: 10px;
   border-radius: 8px;
   height: 520px;
-  max-width: 60%; 
-  width: 100%;
+  max-width: auto; 
+  width: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
