--- a/style.css
+++ b/style.css
@@ -1,10 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
 .body {
-  background-color: rgb(32, 1, 15);
   color: #ffffff;
   text-align: center;
   justify-items: center;
+}
+
+#background-video {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1; 
 }
 
 h1 {
