--- a/style.css
+++ b/style.css
@@ -280,81 +280,6 @@ h2 {
   width: auto;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
+  align-items: space-between;
 }
-
-
-/* Input desplay */
-/* .wave-group {
-  position: relative;
-}
-
-.wave-group .input {
-  font-size: 16px;
-  padding: 10px 10px 10px 5px;
-  display: block;
-  width: 250px;
-  border: none;
-  border-bottom: 1px solid #ffffff;
-  background: transparent;
-}
-
-.wave-group .input:focus {
-  outline: none;
-}
-
-.wave-group .label {
-  color: #ffffff;
-  font-size: 18px;
-  font-weight: normal;
-  position: absolute;
-  pointer-events: none;
-  left: 5px;
-  top: 10px;
-  display: flex;
-}
-
-.wave-group .label-char {
-  transition: 0.2s ease all;
-  transition-delay: calc(var(--index) * .05s);
-}
-
-.wave-group .input:focus~label .label-char,
-.wave-group .input:valid~label .label-char {
-  transform: translateY(-20px);
-  font-size: 14px;
-  color: #be9494;
-}
-
-.wave-group .bar {
-  position: relative;
-  display: block;
-  width: 250px;
-}
-
-.wave-group .bar:before,
-.wave-group .bar:after {
-  content: '';
-  height: 2px;
-  width: 0;
-  bottom: 1px;
-  position: absolute;
-  background: #be9494;
-  transition: 0.2s ease all;
-  -moz-transition: 0.2s ease all;
-  -webkit-transition: 0.2s ease all;
-}
-
-.wave-group .bar:before {
-  left: 50%;
-}
-
-.wave-group .bar:after {
-  right: 50%;
-}
-
-.wave-group .input:focus~.bar:before,
-.wave-group .input:focus~.bar:after {
-  width: 50%;
-} */
